# symbol_convert

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: history.md  requirements.txt
docs/source/: conf.py  index.rst  windows-shortcuts.md
src/symbol_convert/: __init__.py  __version__.py  _convert.py  _version.py  chiness_convert.py  convert.py
